# shpeak

./: .gitignore  pyproject.toml
shpeak/: cli.py  llm.py  prompts.py  translator.py  utils.py
shpeak/data/: cmd_commands.json  operators.py  powershell_commands.json
